RESOLVED FIXED279486
[IFC] Incorrect line breaking when hyphen candidate position is _after_ overflow
https://bugs.webkit.org/show_bug.cgi?id=279486
Summary [IFC] Incorrect line breaking when hyphen candidate position is _after_ overflow
alan
Reported 2024-09-10 20:13:13 PDT
ssia
Attachments
Patch (13.59 KB, patch)
2024-09-10 20:20 PDT, alan
no flags
Patch (26.09 KB, patch)
2024-09-11 10:09 PDT, alan
no flags
[fast-cq]Patch (26.12 KB, patch)
2024-09-11 17:04 PDT, alan
ews-feeder: commit-queue-
alan
Comment 1 2024-09-10 20:20:52 PDT
alan
Comment 2 2024-09-11 10:09:23 PDT
alan
Comment 3 2024-09-11 17:04:36 PDT
Created attachment 472529 [details] [fast-cq]Patch
EWS
Comment 4 2024-09-11 20:38:42 PDT
Committed 283528@main (09aacb0549ce): <https://commits.webkit.org/283528@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 472529 [details].
Radar WebKit Bug Importer
Comment 5 2024-09-11 20:39:12 PDT
Note You need to log in before you can comment on or make changes to this bug.